--- a/localiser-ui/requirements.txt
+++ b/localiser-ui/requirements.txt
@@ -1,2 +1,6 @@
-django>=2.0,<3.0
-django-simple-history==2.7.3
+asgiref==3.2.3
+Django==3.0.3
+django-simple-history==2.8.0
+pytz==2019.1
+six==1.12.0
+sqlparse==0.3.0
