Enable Swift Package Manager

--- a/localiser-generator/generators/ios/templates/XCodeGenProject.yml
+++ b/localiser-generator/generators/ios/templates/XCodeGenProject.yml
@@ -19,4 +19,4 @@ targetTemplates:
         CFBundleShortVersionString: "{{ projectVersion }}"
     scheme: {}
     sources:
-      - .
+      - Sources
