--- a/localiser-ui/requirements.txt
+++ b/localiser-ui/requirements.txt
@@ -1,6 +1,7 @@
-asgiref==3.2.10
-Django==3.1.2
-django-simple-history==2.11.0
-pytz==2020.1
+asgiref==3.3.4
+Django==3.2
+django-simple-history==3.0.0
+protobuf==3.14.0
+pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
