feat(android): target moved from 28 to 30. Updated to android gradle plugin 4.2.1, gradle 6.7.1, Kotlin 1.4.32 and all the latest support libraries versions. Dropped jcenter and bintray. Version bump

--- a/localiser-generator/generators/android/templates/gradle/module/build.gradle
+++ b/localiser-generator/generators/android/templates/gradle/module/build.gradle
@@ -1,20 +1,13 @@
 {% raw %}apply plugin: 'com.android.library'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'kotlin-android'
-
-Properties properties = new Properties()
-if (project.rootProject.file("local.properties").exists()) {
-    properties.load(project.rootProject.file('local.properties').newDataInputStream())
-}
 
 // start - do not modify this if your project is on github
 project.ext{
-    mavDevelopers = [(properties.getProperty("bintray.user")):(maintainer)]
+    mavDevelopers = [(github_username):(maintainer)]
     mavSiteUrl = "https://github.com/${github_username}/${github_repository_name}"
     mavGitUrl = mavSiteUrl + '.git'
     bugTrackerUrl = mavSiteUrl + '/issues/'
-    mavProjectName = bintray_project_name
+    mavProjectName = library_module_name
     mavLibraryLicenses = ["Unlicense":'https://unlicense.org/']
     mavLibraryDescription = library_description
     mavVersion = library_version
@@ -74,22 +67,5 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-    configurations = ['archives']
-    pkg {
-        repo = "maven"
-        name = mavProjectName
-        desc = library_description
-        websiteUrl = mavSiteUrl
-        vcsUrl = mavGitUrl
-        issueTrackerUrl = bugTrackerUrl
-        licenses = library_licenses
-        labels = library_keywords
-        publicDownloadNumbers = true
-        publish = true
-    }
-}
-
-apply from: 'https://raw.githubusercontent.com/sky-uk/gradle-maven-plugin/master/gradle-mavenizer.gradle'{% endraw %}
+apply from: 'https://raw.githubusercontent.com/sky-uk/gradle-maven-plugin/master/gradle-mavenizer.gradle'
+{% endraw %}
